2007-09-13  John Verzani  <jverzani@gmail.com>

	* R/gtree.R: fixed issue with offspring and icons

2007-08-30  John Verzani  <jverzani@gmail.com>

	* R/ggrid.R (make.row.names): Fixed issue with value being a
		  vector in svalue<-; coerce to a data frame

	* R/ggroup.R: avoid raise.on.dragmotion uner windows -- was
		  causing dnd to flutter away

	* R/gcommandline.R: fixed writelines bug with quoted filenames

	* R/gnotebook.R:  fixed "[" with 0-length nbs

2007-08-28  John Verzani  <jverzani@gmail.com>

	* R/gwindow.R: fixed dispose method. Broken somehow?

2007-08-14  John Verzani  <jverzani@gmail.com>

	* R/gfile.R: implemented quote argument (... one called from
		  gfilebrowse). 

	* R/aaaGenerics.R: fixed dispose -- GetParentWindow (not GetParent)

	* R/ggrid.R put 3rd popup on header (better); offset was
		  incorrect; fixed double-click. Didn't like handler on
			  the view.col.

2007-08-13  John Verzani  <jverzani@gmail.com>

	* R/gcommandline.R: fixed @editText -- use tag. THIS COULD BE
		  REWRITTEN. IT IS UGLY!!

2007-08-12  John Verzani  <jverzani@gmail.com>

	* R/ggroup.R: changed raise.on.dragmotion to use focus, not window
		  raise. This was giving issues with windows

	* R/ggraphics.R: addHandlerClicked returns usr coordinates, not
		  NDC. Conversion is not difficult

2007-08-04  John Verzani  <jverzani@gmail.com>

	* R/dnd.R: added override obj to adddropsoruce. This is so glabel
		  can be a drop source

2007-08-03  John Verzani  <jverzani@gmail.com>

	* R/gcheckboxgroup.R: fixed addhandlerchanged

	* R/gmenu.R (gtkMenuPopupHack): fixed lacking separator in
		  menu. Use separator=TRUE to add separator.

2007-08-02  John Verzani  <jverzani@gmail.com>

	* R/gradio.R: added length method
	default handler wasn't right.

2007-07-30  John Verzani  <jverzani@gmail.com>

	* R/gdroplist.R: coerce.with when editable added

2007-07-29  John Verzani  <jverzani@gmail.com>

	* R/ggrid.R: fixed signal handling to depend on gdf or gtable.