@@ -1,6 +1,6 @@
 Package: gWidgetsRGtk2
-Version: 0.0-24
-Date: 2007-08-30
+Version: 0.0-25
+Date: 2007-09-21
 Title: Toolkit implementation of gWidgets for RGtk2
 Author: Michael Lawrence, John Verzani
 Maintainer: John Verzani <gwidgetsrgtk@gmail.com>
@@ -10,4 +10,4 @@ Description: Port of gWidgets API to RGtk2
 License: GPL version 2 or newer
 URL: http://www.math.csi.cuny.edu/pmg
 LazyLoad: yes
-Packaged: Fri Sep 21 11:46:42 2007; verzani
+Packaged: Mon Sep 24 23:04:18 2007; verzani
