@@ -1,3 +1,12 @@
+2007-09-24  John Verzani  <jverzani@gmail.com>
+
+	* R/ggrid.R: fixed sorting (thanks Michael), colors only if gdf, 
+
+2007-09-23  John Verzani  <jverzani@gmail.com>
+
+	* R/gtree.R: fixed coltypes issue that gave issue with
+		  example. Define column types before adding possible icon information.
+
 2007-09-13  John Verzani  <jverzani@gmail.com>
 
 	* R/gtree.R: fixed issue with offspring and icons
